# restic-automator-rs

./: .gitignore  Cargo.toml
src/: main.rs
