[package]
name = "restic-automator-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.13"
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
chrono = "0.4"
